[package]
name = "solid-rust"
version = "0.1.0"
authors = ["Jordan Shurmer <jordan@shurmer.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
tokio = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"

