[package]
name = "solid-rust"
version = "0.1.0"
authors = ["Jordan Shurmer <jordan@shurmer.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
http = "0.1"
hyper = "0.13.0-alpha"
futures-preview = "0.3.0-alpha"
log = "0.4"
pretty_env_logger = "0.3"
tokio = "0.2.0-alpha"
tokio-fs = "0.2.0-alpha"
tokio-io = "0.2.0-alpha"

