[workspace]
[package]
name = "solid-rust"
version = "0.1.0"
authors = ["Jordan Shurmer <jordan@shurmer.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "server" }
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
tokio = { version = "1.18", features = ["macros"]}

