[package]
name = "server"
version = "0.1.0"
authors = ["Jordan Shurmer <jordan@shurmer.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
httpdate = "0.3"
hyper = "0.13"
futures-preview = "0.3.0-alpha"
log = "0.4"
pretty_env_logger = "0.4"
rio_api = "0.5"
rio_turtle = "0.5"
rio_xml = "0.5"
tokio = { version = "1.8", features = ["fs", "test-util"] }